# rfnoc-zluudgbee

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md  README.md.bak
cmake/Modules/: zluudgbeeConfig.cmake
docs/: README.zluudgbee
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: README.md  dummy_coordinator.grc  frame_source.grc  rx_basic.grc  rx_software.grc  zluudgbee_dummycoord_hybrid.grc  zluudgbee_dummycoord_software.grc  zluudgbee_hybrid_phy.grc  zluudgbee_software_phy.grc  zluudgbee_transceiver.grc
grc/: zluudgbee_chdr2pdu.xml  zluudgbee_dummycoord.xml  zluudgbee_softcrc.xml  zluudgbee_zluudgbeeCRC.xml  zluudgbee_zluudgbeeRX.xml
include/zluudgbee/: CMakeLists.txt  api.h  chdr2pdu.h  dummycoord.h  softcrc.h  zluudgbeeCRC.h  zluudgbeeCRC_block_ctrl.hpp  zluudgbeeRX.h  zluudgbeeRX_block_ctrl.hpp
lib/: CMakeLists.txt  chdr2pdu_impl.cc  chdr2pdu_impl.h  dummycoord_impl.cc  qa_zluudgbee.cc  qa_zluudgbee.h  softcrc_impl.cc  test_zluudgbee.cc  zluudgbeeCRC_block_ctrl_impl.cpp  zluudgbeeCRC_impl.cc  zluudgbeeCRC_impl.h  zluudgbeeRX_block_ctrl_impl.cpp  zluudgbeeRX_impl.cc  zluudgbeeRX_impl.h
python/: CMakeLists.txt  __init__.py
rfnoc/blocks/: zluudgbeeCRC.xml  zluudgbeeRX.xml
rfnoc/fpga-src/: Makefile.srcs  noc_block_zluudgbeeCRC.v  noc_block_zluudgbeeRX.v  zluudg_atan.vhd  zluudg_constants.vhd  zluudg_crc16ccitt.vhd  zluudg_decimator.vhd  zluudg_demapper.vhd  zluudg_detector.vhd  zluudg_iir.vhd  zluudg_mult.vhd  zluudg_packager.vhd  zluudg_ppfifo.vhd  zluudg_ram.vhd  zluudg_receiver.vhd  zluudg_shifter.vhd  zluudg_symsync.vhd
rfnoc/testbenches/: CMakeLists.txt
rfnoc/testbenches/noc_block_zluudgbeeCRC_tb/: Makefile  noc_block_zluudgbeeCRC_tb.sv
rfnoc/testbenches/noc_block_zluudgbeeRX_tb/: Makefile  noc_block_zluudgbeeRX_tb.sv
swig/: CMakeLists.txt  zluudgbee_swig.i
